# cpp-qt-pdf-shrink

./: .travis.yml  CMakeLists.txt  LICENCE  README.md  pdf-shrink.desktop
assets/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
